Linked background.js

--- a/popup.html
+++ b/popup.html
@@ -20,7 +20,7 @@
         <textarea type="text" id="textInput" placeholder="Prompt away!"></textarea>
     </div>
 
-    <script src="./bundle.js"></script>
+    <script src="./background.js"></script>
 </body>
 
 </html>
